[package]
name = "ytdlp-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json", "stream", "blocking", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }