[package]
name = "ytdlp-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json", "stream", "blocking", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "fs"] }
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1.1"
shell-words = "1.1"
dirs = "6.0.0"
regex = "1.12.2"
url = "2.5.7"
anyhow = "1.0"
zip = "7.0.0"
actix-web = "4.12.1"