[package]
name = "ytdlp-vk"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"         # или = "s" для чуть лучше производительности
lto = true
codegen-units = 1
strip = true            # доступно в новых версиях Cargo

[dependencies]
reqwest = { version = "0.12.26", features = ["json", "stream", "blocking", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "fs"] }
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1.1"
shell-words = "1.1"
dirs = "6.0.0"
 
anyhow = "1.0"
zip = "7.0.0"
actix-web = "4.12.1"
actix-cors = "0.7.1"
http = "0.2.12"
serde_json = "1.0.145"
dirs-next = "2.0"
directories = "5.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
urlencoding = "2.1.3"
